<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:id="@+id/neww"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sin"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="sinbtn"
                android:text="@string/sin"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/cos"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="cosbtn"
                android:text="@string/cos"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/tan"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="tanbtn"
                android:text="@string/tan"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/backspace"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:contentDescription="@string/backspace"
                android:onClick="backspacebtn"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:srcCompat="@drawable/backspace" />
        </TableRow>

        <TableRow
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="Cbtn"
                android:text="@string/clear"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bracket"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="bracketbtn"
                android:text="@string/parenthesis"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/power"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="powerbtn"
                android:text="@string/exponent"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="dividebtn"
                android:text="@string/divide"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="sevenbtn"
                android:text="@string/seven"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="eightbtn"
                android:text="@string/eight"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="ninebtn"
                android:text="@string/nine"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="multiplybtn"
                android:text="@string/multiply"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/third"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="fourbtn"
                android:text="@string/four"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="fivebtn"
                android:text="@string/five"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="sixbtn"
                android:text="@string/six"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="minusbtn"
                android:text="@string/subtract"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/fourth"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="onebtn"
                android:text="@string/one"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="twobtn"
                android:text="@string/two"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="threebtn"
                android:text="@string/three"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="plusbtn"
                android:text="@string/add"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/fifth"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusminus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="doublezro"
                android:text="@string/plusMinus"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:clickable="false"
                android:focusable="auto"
                android:onClick="zerobtn"
                android:text="@string/zero"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/point"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#191919"
                android:onClick="dotbtn"
                android:text="@string/point"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/equals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="0.5dp"
                android:layout_weight="1"
                android:background="#ff0000"
                android:onClick="equalsbtn"
                android:text="@string/equals"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/output"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:autofillHints="false"
        android:background="#000000"
        android:clickable="false"
        android:inputType="none"
        android:text="@string/output"
        android:textAlignment="textEnd"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/HistoryBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/previous"
        android:textAlignment="textEnd"
        android:textColor="#696969"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/output"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>